Fix error of java version in Heroku